--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<div class="header1">
 			<h1>Choi Yena</a></h1>
 			<ul>
-				<li><a href="home.html">Home</a></li>
+				<li><a href="index.html">Home</a></li>
 				<li class="active"><a href="about.html">About Me</a></li>
 				<li><a href="future.html">Future</a></li>
 				<li><a href="funfact.html">Funfact</a></li>
